@@ -587,6 +587,16 @@
 
 	<varlistentry>
 		<term>
+			<command><option>eval</option></command>
+			<option>string</option>
+		</term>
+		<listitem>
+			Evalutates given string according to the rules of TEXT interpretation, i.e. parsing any contained text object specifications into their output, any occuring '$$' into a single '$' and so on. The output is then being parsed again.
+			<para></para></listitem>
+	</varlistentry>
+
+	<varlistentry>
+		<term>
 			<command><option>exec</option></command>
 			<option>command</option>
 		</term>
