@@ -1,3 +1,6 @@
+2009-03-24
+	* Added eval text object to realise double parsing
+
 2009-03-16
 	* Fix bug with wacky netstat values on startup
 
